// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform import 1`] = `
"import * as React from "react"
import { Foo } from "bar"
    import { Button } from "@/registry/miami/ui/button"
    import { Label} from "ui/label"
    import { Box } from "@/registry/miami/box"

    import { ny } from "@/lib/utils"
    "
`;

exports[`transform import 2`] = `
"import * as React from "react"
import { Foo } from "bar"
    import { Button } from "@/registry/miami/ui/button"
    import { Label} from "ui/label"
    import { Box } from "@/registry/miami/box"

    import { ny, foo, bar } from "@/lib/utils"
    import { bar } from "@/lib/utils/bar"
    "
`;

exports[`transform import 3`] = `
"import * as React from "react"
import { Foo } from "bar"
    import { Button } from "@/registry/miami/ui/button"
    import { Label} from "ui/label"
    import { Box } from "@/registry/miami/box"

    import { ny } from "@/lib/utils"
    import { bar } from "@/lib/utils/bar"
    "
`;

exports[`transform import 4`] = `
"import * as React from "react"
import { Foo } from "bar"
    import { Button } from "@/registry/miami/ui/button"
    import { Label} from "ui/label"
    import { Box } from "@/registry/miami/box"

    import { ny } from "@/lib/utils"
    import { bar } from "@/lib/utils/bar"
    "
`;

exports[`transform import 5`] = `
"import * as React from "react"
import { Foo } from "bar"
    import { Button } from "@/registry/miami/ui/button"
    import { Label} from "ui/label"
    import { Box } from "@/registry/miami/box"

    import { ny } from "@/lib/utils"
    import { bar } from "@/lib/utils/bar"
    "
`;
